# pabitell

./: .gitmodules  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md
.github/workflows/: code-quality.yml  create-release.yml
pabitell-cli/: Cargo.toml  README.md
pabitell-cli/src/: backend.rs  cli.rs  main.rs  web.rs  websocket.rs
pabitell-lib/: Cargo.toml  README.md
pabitell-lib/resources/cs/: global.ftl
pabitell-lib/resources/en/: global.ftl
pabitell-lib/resources/en-US/: global.ftl
pabitell-lib/src/: cli.rs  conditions.rs  data.rs  events.rs  items.rs  lib.rs  protocol.rs  scenes.rs  translations.rs  updates.rs  webapp.rs
pabitell-lib/src/cli/: backend.rs  cmdline.rs
pabitell-lib/src/data/: characters.rs
pabitell-lib/src/webapp/: action_event.rs  action_item.rs  action_join.rs  actions.rs  app.rs  character_switch.rs  characters.rs  database.rs  editor.rs  geo_navigator.rs  intro.rs  items.rs  jsQR.rs  language_switch.rs  message.rs  messages.rs  print.rs  qrcode.rs  qrscanner.rs  scenes.rs  speech.rs  status.rs  websocket_client.rs
pabitell-root/: Cargo.toml  Font-Awesome  README.md  Trunk.toml  bulma  index.html  index.sass
pabitell-root/resources/cs/: root.ftl
pabitell-root/resources/en/: root.ftl
pabitell-root/resources/en-US/: root.ftl
pabitell-root/src/: components.rs  data.rs  main.rs  router.rs  translations.rs
pabitell-root/src/components/: book.rs  books.rs  breadcrumb.rs  footer.rs  help.rs  language.rs  title.rs
pabitell-webserver/: Cargo.toml  README.md
pabitell-webserver/src/: main.rs  web.rs
stories/doggie-and-kitie/cake/: Cargo.toml  Trunk.toml  index.html  index.sass  trunk.toml
stories/doggie-and-kitie/cake/resources/cs/: doggie_and_kitie-cake.ftl  povidani-o-pejskovi-a-kocicce.dort.ftl
stories/doggie-and-kitie/cake/resources/en-US/: doggie_and_kitie-cake.ftl  povidani-o-pejskovi-a-kocicce.dort.ftl
stories/doggie-and-kitie/cake/src/: characters.rs  events.rs  items.rs  lib.rs  main.rs  narrator.rs  scenes.rs  site.rs  translations.rs  webapp.rs  world.rs
stories/doggie-and-kitie/cake/src/site/: action.rs  action_event.rs  action_item.rs  action_join.rs  actions.rs  app.rs  character_combo.rs  character_switch.rs  characters.rs  intro.rs  items.rs  message.rs  messages.rs  print.rs  print_items.rs  qrcode.rs  qrscanner.rs  speech.rs  status.rs
stories/doggie-and-kitie/cake/src/webapp/: action_item.rs  app.rs  items.rs  print_items.rs  qrcode.rs  root.rs  status.rs  world.rs
stories/doggie-and-kitie/doll/: Trunk.toml  bulma  index.html  index.sass
stories/doggie-and-kitie/doll/resources/cs/: doggie_and_kitie-doll.ftl
stories/doggie-and-kitie/doll/resources/en-US/: doggie_and_kitie-doll.ftl
stories/doggie-and-kitie/doll/src/: characters.rs  events.rs  items.rs  lib.rs  main.rs  narrator.rs  scenes.rs  translations.rs  world.rs
stories/doggie-and-kitie/doll/src/webapp/: items.rs  print_items.rs  root.rs  world.rs
stories/doggie_and_kitie/cake/: Cargo.toml  Font-Awesome  README.md  index.html  jsQR
stories/doggie_and_kitie/cake/resources/cs/: doggie_and_kitie-cake.ftl
stories/doggie_and_kitie/cake/resources/en/: doggie_and_kitie-cake.ftl
stories/doggie_and_kitie/cake/src/: characters.rs  events.rs  items.rs  lib.rs  narrator.rs  scenes.rs  translations.rs  webapp.rs  world.rs
stories/doggie_and_kitie/cake/src/webapp/: characters.rs  items.rs  narrator.rs  print_items.rs  root.rs
stories/doggie_and_kitie/doll/: Cargo.toml  README.md  index.html
stories/doggie_and_kitie/doll/resources/cs/: doggie_and_kitie-doll.ftl
stories/doggie_and_kitie/doll/resources/en/: doggie_and_kitie-doll.ftl
stories/doggie_and_kitie/doll/src/: characters.rs  events.rs  items.rs  lib.rs  narrator.rs  scenes.rs  translations.rs  world.rs
stories/doggie_and_kitie/doll/src/webapp/: items.rs  narrator.rs  print_items.rs  root.rs
