[package]
name = "pabitell-cli"
version = "0.1.0"
edition = "2018"

[features]
default = []
with_doggie_and_kitie = [
	"with_doggie_and_kitie_cake"
]
with_doggie_and_kitie_cake = ["doggie_and_kitie_cake"]

[dependencies]
actix = "0.12"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.7"
anyhow = "1"
clap = "3.0.0-beta.2"
futures = "0.3"
pabitell-lib = { path = "../pabitell-lib/", features = ["with_translations"] }
rand = "0.8"
skim = "0.9"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"]}
uuid = { version = "0.8", features = ["serde"] }

# Stories
doggie_and_kitie_cake = { path = "../stories/doggie-and-kitie/cake/", optional = true }
