[package]
name = "pabitell-cli"
version = "0.1.0"
edition = "2018"

[features]
default = []
with_doggie_and_kitie_cake = ["doggie_and_kitie_cake"]
with_doggie_and_kitie_doll = ["doggie_and_kitie_doll"]
with_doggie_and_kitie = [
	"with_doggie_and_kitie_cake",
	"with_doggie_and_kitie_doll",
]

[dependencies]
actix = "0.12"
actix-web = "4.0.0-beta.14"
actix-web-actors = "4.0.0-beta.8"
anyhow = "1"
clap = { version = "3.0.0-beta.rc.4", features = ["env", "cargo"]}
futures = "0.3"
lazy_static = "1"
pabitell-lib = { path = "../pabitell-lib/", features = ["with_translations"] }
term = "0.7"
rand = "0.8"
skim = "0.9"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"]}
tracing = "0.1"
tracing-actix-web = "0.5.0-beta.5"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "0.8", features = ["serde"] }

# Stories
doggie_and_kitie_cake = { path = "../stories/doggie-and-kitie/cake/", optional = true }
doggie_and_kitie_doll = { path = "../stories/doggie-and-kitie/doll/", optional = true }
