[package]
name = "pabitell-lib"
version = "0.1.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2021"
description = "Interactive storytelling - core library"
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["games", "stories", "books"]
repository = "https://github.com/shenek/pabitell"
categories = ["games-engines"]

[dependencies]
anyhow = "1"
base64 = { version = "0.13", optional = true }
build-time = { version = "0.1", optional = true}
chrono = { version = "0.4", optional = true, features = ["serde", "wasmbind"] }
console_error_panic_hook = { version = "0.1", optional = true }
data-url = { version = "0.1", optional = true }
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
futures = { version = "0.3", optional = true }
gloo = { version = "0.8", features = ["futures"], optional = true }
gloo-net = { version = "0.2", features = ["websocket"], optional = true }
image = { version = "0.24", optional = true, features = ["png"] }
include_dir = { version = "0.7", features = ["glob"] }
intl-memoizer = "0.5"
js-sys = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
lazy_static = "1"
qrcode = { version = "0.12", features = ["svg"], optional = true }
rexie = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stream-cancel = "0.8"
unic-langid = { version = "0.9", features = ["macros"] }
uuid = { version = "1.1", features = ["serde", "v4"]}
wasm-bindgen = { version = "0.2", features = [ 'default', 'serde-serialize'], optional = true } 
wasm-bindgen-futures  = { version = "0.4", optional = true}
wasm-logger = { version = "0.2", optional = true }
yew = { version = "0.19", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
	"Blob",
	"CanvasRenderingContext2d",
	"ConstrainBooleanParameters",
	"DisplayMediaStreamConstraints",
	"Document",
	"ImageData",
	"OrientationLockType",
	"MediaDevices",
	"MediaDeviceKind",
	"MediaDeviceInfo",
	"MediaStream",
	"MediaStreamConstraints",
	"MediaStreamTrack",
	"MediaTrackSettings",
	"Window",
	"Navigator",
	"Element",
	"EventTarget",
	"HtmlMediaElement",
	"HtmlCanvasElement",
	"HtmlVideoElement",
	"HtmlSelectElement",
	"Screen",
	"ScreenOrientation",
	"SpeechSynthesis",
	"SpeechSynthesisUtterance",
	"SpeechSynthesisVoice",
]
optional = true

[features]
default = []
with_webapp = [
	"base64",
	"build-time",
	"console_error_panic_hook",
	"chrono",
	"data-url",
	"futures",
	"gloo/futures",
	"gloo-net/websocket",
	"image/png",
	"js-sys",
	"log",
	"rexie",
	"qrcode/svg",
	"uuid/js",
	"wasm-bindgen/default",
	"wasm-bindgen/serde-serialize",
	"wasm-bindgen-futures",
	"wasm-logger",
	"web-sys",
	"yew",
]

[dev-dependencies]
