[package]
name = "pabitell-root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
console_error_panic_hook = "~0.1.6"
fluent-bundle = "~0.15.2"
gloo = "~0.6"
include_dir = { version = "~0.7.2", features = ["glob"] }
intl-memoizer = "~0.5.1"
lazy_static = "^1.4"
log = "~0.4.14"
sycamore = "0.8.0-beta.3"
sycamore-router = "0.8.0-beta.3"
unic-langid = { version = "~0.9.0", features = ["macros"] }
wasm-logger = "0.2"
wee_alloc = "~0.4.5"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
#opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
