[package]
name = "pabitell-root"
version = "0.1.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2021"
description = "Interactive storytelling - landing page"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["games", "stories", "books"]
repository = "https://github.com/shenek/pabitell"
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
fluent = "0.16"
gloo = "0.8"
include_dir = { version = "0.7", features = ["glob"] }
intl-memoizer = "0.5"
lazy_static = "1"
log = "0.4"
qrcode = { version = "0.12", features = ["svg"] }
sycamore = "0.8.0-beta.7"
sycamore-router = "0.8.0-beta.7"
unic-langid = { version = "0.9", features = ["macros"] }
wasm-logger = "0.2"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
	"Window",
	"Location",
]

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
#opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
