[package]
name = "doggie_and_kitie_cake"
version = "0.1.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2018"

[features]
default = [ 'with_webapp' ]
with_webapp = [
	'console_error_panic_hook',
	'getrandom/js',
	'uuid/v4',
	'uuid/stdweb',
	'wasm-logger',
	'wee_alloc',
	'yew',
]	

[dependencies]
anyhow = "1"
fluent-bundle = { version = "~0.15.0" }
console_error_panic_hook = { version = "~0.1.6", optional = true }
include_dir = { version = "~0.6.1" }
intl-memoizer = { version = "~0.5.1" }
getrandom = { version = "0.2", features = ["js"] }  # add optional once https://github.com/thedodd/trunk/pull/183 is merged
lazy_static = { version = "~1.4.0" }
log = "~0.4.14"
pabitell-lib = { path = "../../../pabitell-lib/", features = ["with_translations"] }
qrcode = { version = "0.11", features = ["svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = [ 'v4', 'stdweb' ] } # remove features once https://github.com/thedodd/trunk/pull/183 is merged 
wee_alloc = { version = "~0.4.5", optional = true }
wasm-logger = { version = "0.2", optional = true }
yew = { git = "https://github.com/yewstack/yew.git", branch = "master", optional = true }

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
#opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
